fix attempt on mobile guard

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -562,7 +562,7 @@ footer a {
     content: '';
     width: 45px;
     height: 45px;
-    background-image: url('assets/images/icon_quotes.svg');
+    background-image: url('/images/icon_quotes.svg');
     background-size: contain;
     background-position: center;
     background-repeat: no-repeat;
